--- a/VRChat/85/1306885.html
+++ b/VRChat/85/1306885.html
@@ -78,10 +78,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="memex"
-        data-product-category="33" data-product-id="1306885"
-        data-product-list="market_show" data-product-price="200"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="memex" data-product-category="33"
+        data-product-id="1306885" data-product-list="market_show"
+        data-product-price="200" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="memex" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5673308/icon_image/1531e145-d5c7-4a00-908e-588fdbaa5986_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               memex
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Original Sound Track「Computational
                           Nirvana」
                         </h2>
@@ -218,18 +218,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1306885"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "Original Sound Track「Computational Nirvana」 | memex"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1306885"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "Original Sound Track「Computational Nirvana」 | memex"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1306885"
@@ -239,7 +238,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -260,7 +259,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/d0f38e59-fab5-4e19-a0d4-19759df07943/s/1306885/full/a7105e1f-a028-4ae7-bb8a-5215496650ae.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -290,7 +290,7 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
+                        "js-market-item-detail-description">
                           <table class="tracks">
                             <tr>
                               <td class="track-number">
@@ -311,7 +311,7 @@
                               </td>
                             </tr>
                           </table>
-                          <p class="autolink">
+                          <p class="autolink u-text-wrap">
                             魂を開放するに相応しい、自由な場所を求めた私たちは、いま、ここにたどり着いた。
                             計算機上の実質的現実空間から捧ぐ、欲望と絶望の歌へと繋ぐ。
                             2019/4/6開催のVRChat
@@ -323,8 +323,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
