--- a/VRChat/45/1305145.html
+++ b/VRChat/45/1305145.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "pmp-musicproject" data-product-category="123"
-        data-product-id="1305145" data-product-list="market_show"
-        data-product-price="300" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="pmp-musicproject"
+        data-product-category="123" data-product-id="1305145"
+        data-product-list="market_show" data-product-price="300"
+        data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -102,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +125,13 @@
                             "Ponzu Music Project Official Shop"
                             class="user-avatar at-item-summary"
                             src="https://booth.pximg.net/c/48x48/users/3211628/icon_image/534980ce-6c93-4130-b01a-df478e161187_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Ponzu Music Project Official Shop
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           VRChat ワールド向けBGM集
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -219,18 +220,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1305145"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "VRChat ワールド向けBGM集 | Ponzu Music Project Official Shop"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1305145"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "VRChat ワールド向けBGM集 | Ponzu Music Project Official Shop"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1305145"
@@ -240,7 +240,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -260,8 +260,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             こちらの商品は、VRChatワールド制作者さま向けのBGM素材となります。
                             オーケストラ曲、ピアノ曲を中心に15曲を収録！
                             最新作のみSoundCloudにて試聴ができます。 【利用規約】
@@ -290,8 +290,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
